# VIVIRITY

./: .gitignore  HACKATHON_ALIGNMENT_RATING.md  README.md  app.py  dashboards.py  main.py  pyproject.toml  requirements.txt
a2a/: __init__.py  agent_cards.py  schemas.py  server.py  task_manager.py
agents/: cam_agent.py  cross_reference_agent.py  document_classifier.py  ingestor_agent.py  research_agent.py  scoring_agent.py
core/: cam_generator.py  databricks_layer.py  financial_extractor.py  ml_credit_model.py  pdf_parser.py  realtime_integration.py  risk_engine.py  stress_testing.py  trend_analysis.py
dashboards/: __init__.py  realtime_dashboard.py  stress_testing_dashboard.py  trend_dashboard.py
demo_data/: README_DEMO_CASES.md  generate_realtime_stream.py  realtime_bank_transactions.csv  realtime_stream_cases.jsonl  rejection_scenario_notes.txt  run_case_decisions.py  sample_bank_statement.csv  sample_cibil.json  sample_gst.json
outputs/: CAM_Infosys  Limited_20260309_110936.docx  CAM_Infosys  Limited_20260309_121415.docx  CAM_Infosys  Limited_20260309_140933.docx  CAM_Infosys  Limited_20260309_143632.docx  CAM_Infosys  Limited_20260309_183733.docx  CAM_Infosys  Limited_20260309_184528.docx  CAM_NOVA RETAILMART_20260309_190118.docx  CAM_NOVA RETAILMART_20260309_190442.docx  CAM_NOVA RETAILMART_20260309_190955.docx  CAM_Nova Retailmart Private Limited_20260312_181957.docx  CAM_Tata Motors Limited_20260306_092726.docx  CAM_Tata Motors Limited_20260306_133309.docx  CAM_Tata Motors Limited_20260306_201553.docx  CAM_Tata Motors Limited_20260307_101100.docx  (+16 more)
(+77 files in other folders)
