[project]
name = "vivrity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=1.26.0",
    "google-generativeai>=0.8.6",
    "pdfplumber>=0.11.9",
    "pymupdf>=1.27.1",
    "python-docx>=1.2.0",
    "reportlab>=4.4.10",
    "requests>=2.32.5",
    "streamlit>=1.55.0",
    "tavily-python>=0.7.22",
]
