[project]
name = "vivrity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docx2pdf>=0.1.8",
    "flask>=3.0.0",
    "google-adk>=1.26.0",
    "google-generativeai>=0.8.6",
    "pdfplumber>=0.11.9",
    "Pillow>=10.0.0",    "plotly>=5.18.0",    "pymupdf>=1.27.1",
    "pytesseract>=0.3.10",
    "python-docx>=1.2.0",
    "python-dotenv>=1.0.0",
    "reportlab>=4.4.10",
    "requests>=2.32.5",
    "streamlit>=1.55.0",
    "tavily-python>=0.7.22",
]
